--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+.mainJoke {
+    text-align: center;
+    background-color: #BCE7FD;
+    height: 30vh;
+    width: 40vw;
+    position: relative;
+    left: 30%;
+    top: 150px;
+    padding: 1px 10px 35px 10px;
+    border-radius: 10px;
+    box-shadow: 2px 3px 6px 1px black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: pink;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.new-joke {
+    margin-top: 30px;
+    height: 6vh;
+    width: 15vw;
+    font-size: 15px;
+    color: black;
+    background-color: #21FA90;
+    border-color: #21FA90;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.new-joke:hover {
+    cursor: pointer;
 }
